Add swagger documentation for category controller

--- a/CatMarket/src/main/resources/application.properties
+++ b/CatMarket/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=CatMarket
 spring.docker.compose.enabled=false
+springdoc.api-docs.path=/v3/api-docs
+springdoc.api-docs.enabled=true
+springdoc.api-docs.locations=classpath:/openapi/catmarket.yaml
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.url=/openapi/catmarket.yaml
