--- a/CatMarket/src/main/resources/static/openapi/catmarket.yaml
+++ b/CatMarket/src/main/resources/static/openapi/catmarket.yaml
@@ -8,6 +8,10 @@ tags:
     description: Operations with categories
   - name: Products
     description: Operations with products
+  - name: Carts
+    description: Operations with shopping carts
+  - name: Orders
+    description: Operations with orders
 
 paths:
   /api/v1/categories:
@@ -32,13 +36,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorDtoResponse'
+                $ref: '#/components/schemas/ErrorResponse'
         '409':
           description: Conflict (e.g., category already exists)
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorDtoResponse'
+                $ref: '#/components/schemas/ErrorResponse'
     get:
       tags: [Categories]
       summary: Get all categories
@@ -51,17 +55,19 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/CategoryDtoResponse'
+
   /api/v1/categories/{id}:
+    parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+        description: ID of the category
     get:
       tags: [Categories]
       summary: Get category by ID
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
       responses:
         '200':
           description: Category found
@@ -74,17 +80,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorDtoResponse'
+                $ref: '#/components/schemas/ErrorResponse'
     put:
       tags: [Categories]
       summary: Update category by ID
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
       requestBody:
         required: true
         content:
@@ -103,23 +102,16 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorDtoResponse'
+                $ref: '#/components/schemas/ErrorResponse'
         '409':
           description: Update conflict
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorDtoResponse'
+                $ref: '#/components/schemas/ErrorResponse'
     delete:
       tags: [Categories]
       summary: Delete category by ID
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
       responses:
         '204':
           description: Category deleted
@@ -128,7 +120,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorDtoResponse'
+                $ref: '#/components/schemas/ErrorResponse'
 
   /api/v1/products:
     post:
@@ -152,13 +144,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorDtoResponse'
+                $ref: '#/components/schemas/ErrorResponse'
         '409':
           description: Conflict (e.g., product already exists)
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorDtoResponse'
+                $ref: '#/components/schemas/ErrorResponse'
     get:
       tags: [Products]
       summary: Get all products
@@ -171,17 +163,19 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/ProductDtoResponse'
+
   /api/v1/products/{id}:
+    parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+        description: ID of the product
     get:
       tags: [Products]
       summary: Get product by ID
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
       responses:
         '200':
           description: Product found
@@ -194,17 +188,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorDtoResponse'
+                $ref: '#/components/schemas/ErrorResponse'
     put:
       tags: [Products]
       summary: Update product by ID
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
       requestBody:
         required: true
         content:
@@ -223,23 +210,16 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorDtoResponse'
+                $ref: '#/components/schemas/ErrorResponse'
         '409':
           description: Update conflict
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorDtoResponse'
+                $ref: '#/components/schemas/ErrorResponse'
     delete:
       tags: [Products]
       summary: Delete product by ID
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
       responses:
         '204':
           description: Product deleted
@@ -248,7 +228,133 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorDtoResponse'
+                $ref: '#/components/schemas/ErrorResponse'
+
+  /api/v1/carts/items/{productId}:
+    parameters:
+      - name: productId
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+        description: ID of the product to add
+    put:
+      tags: [Carts]
+      summary: Add product to user's cart
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CartQuantityRequest'
+      responses:
+        '204':
+          description: Product added to cart
+        '404':
+          description: Cart for this user not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+  /api/v1/carts:
+    get:
+      tags: [Carts]
+      summary: Get cart for a user
+      responses:
+        '200':
+          description: User cart found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CartDtoResponse'
+        '404':
+          description: Cart for this user not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+    delete:
+      tags: [Carts]
+      summary: Clean cart for a user
+      responses:
+        '204':
+          description: Cart cleaned successfully
+
+  /api/v1/orders:
+    post:
+      tags: [Orders]
+      summary: Create a new order
+      description: Creates a new order based on the current user's cart (userId is mocked for now)
+      responses:
+        '201':
+          description: Order created
+          headers:
+            Location:
+              description: URI of the created order
+              schema:
+                type: string
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderDtoResponse'
+        '404':
+          description: Cart or product not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+    get:
+      tags: [Orders]
+      summary: Get all orders
+      responses:
+        '200':
+          description: List of orders
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/OrderDtoResponse'
+
+  /api/v1/orders/{id}:
+    parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+        description: ID of the order
+    get:
+      tags: [Orders]
+      summary: Get order by ID
+      responses:
+        '200':
+          description: Order found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderDtoResponse'
+        '404':
+          description: Order not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+    delete:
+      tags: [Orders]
+      summary: Delete order by ID
+      responses:
+        '204':
+          description: Order deleted
+        '404':
+          description: Order not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 
 components:
   schemas:
@@ -257,8 +363,8 @@ components:
       properties:
         name:
           type: string
-      required:
-        - name
+      required: [name]
+
     CategoryDtoResponse:
       type: object
       properties:
@@ -267,6 +373,7 @@ components:
           format: uuid
         name:
           type: string
+
     ProductDtoRequest:
       type: object
       properties:
@@ -280,11 +387,8 @@ components:
         categoryId:
           type: string
           format: uuid
-      required:
-        - name
-        - price
-        - imageUrl
-        - categoryId
+      required: [name, price, imageUrl, categoryId]
+
     ProductDtoResponse:
       type: object
       properties:
@@ -299,22 +403,75 @@ components:
           type: string
         category:
           type: string
-    ErrorDtoResponse:
+
+    CartQuantityRequest:
       type: object
       properties:
-        timestamp:
+        quantity:
+          type: integer
+          minimum: 1
+      required: [quantity]
+
+    CartItemDtoResponse:
+      type: object
+      properties:
+        product:
+          type: string
+        price:
+          type: integer
+        quantity:
+          type: integer
+
+    CartDtoResponse:
+      type: object
+      properties:
+        userId:
+          type: string
+          format: uuid
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/CartItemDtoResponse'
+
+    OrderItemDtoResponse:
+      type: object
+      properties:
+        productName:
+          type: string
+        productPrice:
+          type: integer
+        quantity:
+          type: integer
+
+    OrderDtoResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        creationTime:
           type: string
           format: date-time
+        totalCost:
+          type: integer
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/OrderItemDtoResponse'
+
+    ErrorResponse:
+      type: object
+      properties:
+        type:
+          type: string
+        title:
+          type: string
         status:
           type: integer
-        error:
+        details:
           type: string
-        message:
+        instance:
           type: string
-          nullable: true
-        path:
-          type: string
-          nullable: true
         errors:
           type: object
           additionalProperties:
