--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Set up JDK 21 (you can change to another version if needed)
+      # Set up JDK 21 (changed from 17)
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
