--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -35,11 +35,11 @@ jobs:
             gradle-
 
       - name: Grant execute permission for Gradlew
-        run: chmod +x ./gradlew
+        run: chmod +x ./CatMarket/gradlew
 
       # Run Gradle build and tests with coverage
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@v4
+        uses: gradle/gradle-build-action@v3
         with:
           cache-disabled: true
           generate-job-summary: false
