--- a/CatMarket/src/main/resources/application.yaml
+++ b/CatMarket/src/main/resources/application.yaml
@@ -4,8 +4,32 @@ spring:
   docker:
     compose:
       enabled: false
-  profiles:
-    active: feature
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/catmarket_db
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    show-sql: true
+    open-in-view: false
+    properties:
+      hibernate:
+        jdbc.time_zone: UTC
+        jdbc.batch_size: 15
+        order_inserts: true
+        order_updates: true
+        query.fail_on_pagination_over_collection_fetch: true
+        query.in_clause_parameter_padding: true
+        connection.provider_disables_autocommit: true
+    hibernate:
+      ddl-auto: none
+
+  liquibase:
+    change-log: classpath:liquibase/changelog.yaml
+    enabled: true
+
 springdoc:
   api-docs:
     enabled: true
