--- a/CatMarket/src/main/resources/application.yaml
+++ b/CatMarket/src/main/resources/application.yaml
@@ -22,7 +22,6 @@ spring:
         order_updates: true
         query.fail_on_pagination_over_collection_fetch: true
         query.in_clause_parameter_padding: true
-        connection.provider_disables_autocommit: true
     hibernate:
       ddl-auto: none
 
@@ -36,3 +35,9 @@ springdoc:
   swagger-ui:
     enabled: true
     url: /openapi/catmarket.yaml
+
+#logging:
+#  level:
+#    org.hibernate.SQL: debug
+#    org.hibernate.type: trace
+#    org.springframework.orm.jpa: debug
