--- a/CatMarket/src/main/resources/application.yaml
+++ b/CatMarket/src/main/resources/application.yaml
@@ -29,6 +29,24 @@ spring:
     change-log: classpath:liquibase/changelog.yaml
     enabled: true
 
+  security:
+    oauth2:
+      client:
+        registration:
+          github:
+            client-id: Ov23lirSNkFQXPZxI8Yj
+            client-secret: a9811c09a19740919ae57967e8b802168e70addd
+            scope:
+              - read:user,user:email
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+            client-name: GitHub
+        provider:
+          github:
+            authorization-uri: https://github.com/login/oauth/authorize
+            token-uri: https://github.com/login/oauth/access_token
+            user-info-uri: https://api.github.com/user
+            user-name-attribute: id
+
 springdoc:
   api-docs:
     enabled: true
