Add changes and delete .DS_Store

--- a/CatMarket/src/main/resources/application.yaml
+++ b/CatMarket/src/main/resources/application.yaml
@@ -4,6 +4,8 @@ spring:
   docker:
     compose:
       enabled: false
+  profiles:
+    active: feature
 
   datasource:
     url: jdbc:postgresql://localhost:5432/catmarket_db
